--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -5,23 +5,25 @@
     font-style: normal;
     src: url(../fonts/mulish/Mulish-Regular.ttf);
   }
+  @font-face {
+    font-family: "Inter";
+    font-style: normal;
+    src: url(../fonts/inter/inter_variable.ttf);
+  }
   
   #__nuxt .app {
-    font-family: "FiraSans", sans-serif;
+    font-family: "Inter", sans-serif;
   }
   
   
   html,
   body #app {
     -webkit-font-smoothing: antialiased;
-    background: #E5E5E5 !important;
+    background: #f3f2f9 !important;
     font-style: normal !important;
-    font-family: "Mulish", sans-serif !important;
+    font-family: "Inter", sans-serif !important;
     margin: 0;
     overflow-x: hidden;
-    font-size: 12px !important;
-    color: #2c2b2e;
-    font-weight: 100;
   }
   
   /*******************
