--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,4 +1,1 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
-// $font-size-root: 20px;
+$primary: #4c4c4c;
