--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,6 +1,7 @@
+@import "_variables";
 @import '_mixin';
 @import "_fonts";
 @import "_body";
 @import "_images";
-@import "_variables";
 @import "_button";
+@import "_table"
