Use paginated datas

--- a/assets/css/_button.scss
+++ b/assets/css/_button.scss
@@ -7,3 +7,14 @@ button{
     }
     }
 }
+.v-data-footer{
+    & button{
+        & span{
+        &.v-btn__content{
+            font-weight: bold;
+            color: $button !important;
+            text-decoration-color: white;
+        }
+        }
+    }
+}
